rename page.css 7

--- a/become-a-host/intro.html
+++ b/become-a-host/intro.html
@@ -304,7 +304,7 @@
                               Become a Host in 10 easy steps
                             </h1>
                             <div class="_qnr0t6x">
-                              <span class="ll4r2nl dir dir-ltr"
+                              <span class="place__tips-desc-text dir dir-ltr"
                                 >Join us. We'll help you every step of the
                                 way.</span
                               >
