--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -355,7 +355,7 @@
                               class="_v1sw7ev"
                               style="animation-delay: 497.9674649614837ms"
                             >
-                              <span class="ll4r2nl dir dir-ltr"
+                              <span class="place__tips-desc-text dir dir-ltr"
                                 >Be sure to comply with your
                                 <span class="_11waoz2"
                                   ><a
