--- a/calendar_week.html
+++ b/calendar_week.html
@@ -414,7 +414,7 @@
                                     </g>
                                   </svg>
                                 </span></button></span
-                            ><span class="_149pqlo"
+                            ><span class="place__show-photos-icon"
                               ><button
                                 aria-label="Next month"
                                 type="button"
