--- a/contact-host.html
+++ b/contact-host.html
@@ -2214,10 +2214,10 @@
                                                           </div>
                                                           <div class="_j3ajgm">
                                                             <ol
-                                                              class="lgx66tx dir dir-ltr"
+                                                              class="place__rate-text-wrapper dir dir-ltr"
                                                             >
                                                               <li
-                                                                class="l7n4lsf dir dir-ltr"
+                                                                class="place__rate-text dir dir-ltr"
                                                               >
                                                                 <span
                                                                   class="_b1sf0c"
@@ -2231,7 +2231,7 @@
                                                                   ><span
                                                                     aria-hidden="true"
                                                                     ><span
-                                                                      class="ll4r2nl dir dir-ltr"
+                                                                      class="place__tips-desc-text dir dir-ltr"
                                                                       >4.97 ·
                                                                       134
                                                                       reviews</span
@@ -2244,21 +2244,21 @@
                                                                     reviews.</span
                                                                   ></span
                                                                 ><span
-                                                                  class="axjq0r dir dir-ltr"
+                                                                  class="place__rate-text-spacer-wrapper dir dir-ltr"
                                                                   ><span
-                                                                    class="s1b4clln dir dir-ltr"
+                                                                    class="place__rate-text-spacer dir dir-ltr"
                                                                     aria-hidden="true"
                                                                     >·</span
                                                                   ></span
                                                                 >
                                                               </li>
                                                               <li
-                                                                class="l7n4lsf dir dir-ltr"
+                                                                class="place__rate-text dir dir-ltr"
                                                               >
                                                                 <span
-                                                                  class="pen26si dir dir-ltr"
+                                                                  class="place__rate-text-mr-3 dir dir-ltr"
                                                                   ><span
-                                                                    class="s1b4clln dir dir-ltr"
+                                                                    class="place__rate-text-spacer dir dir-ltr"
                                                                     aria-hidden="true"
                                                                     >·</span
                                                                   ></span
@@ -2267,7 +2267,7 @@
                                                                   ><span
                                                                     aria-hidden="false"
                                                                     ><span
-                                                                      class="ll4r2nl dir dir-ltr"
+                                                                      class="place__tips-desc-text dir dir-ltr"
                                                                       >Entire
                                                                       home</span
                                                                     ></span
