--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -397,7 +397,7 @@
                                     line-height: 24px;
                                   "
                                 >
-                                  <span class="ll4r2nl dir dir-ltr"
+                                  <span class="place__tips-desc-text dir dir-ltr"
                                     >Keep in mind that someone booking your
                                     experience might book spots for other
                                     guests. If there are strict requirements
@@ -525,7 +525,7 @@
                                                     class="explore-filter-menu__list-title"
                                                   >
                                                     <span
-                                                      class="ll4r2nl dir dir-ltr"
+                                                      class="place__tips-desc-text dir dir-ltr"
                                                       >Parents can bring kids
                                                       under 2 years</span
                                                     >
@@ -558,13 +558,13 @@
                                       >
                                         <fieldset class="_25bp3z">
                                           <legend class="_1wjt7fx">
-                                            <span class="ll4r2nl dir dir-ltr"
+                                            <span class="place__tips-desc-text dir dir-ltr"
                                               >Does your experience have any
                                               accessibility features?
                                               (optional)</span
                                             >
                                             <div class="svqfy2m dir dir-ltr">
-                                              <span class="ll4r2nl dir dir-ltr"
+                                              <span class="place__tips-desc-text dir dir-ltr"
                                                 >Changes are reviewed before
                                                 they go live on your Experience
                                                 page.
@@ -597,7 +597,7 @@
                                                     class="explore-filter-menu__list-title"
                                                   >
                                                     <span
-                                                      class="ll4r2nl dir dir-ltr"
+                                                      class="place__tips-desc-text dir dir-ltr"
                                                       >Communication
                                                       accessibility
                                                       features</span
@@ -605,7 +605,7 @@
                                                   </div>
                                                   <div
                                                     id="Tag:4804-row-subtitle"
-                                                    class="_1imhiqqh"
+                                                    class="personal-info__phone-number-desc"
                                                   >
                                                     This is how you communicate
                                                     with guests on your
@@ -644,14 +644,14 @@
                                                     class="explore-filter-menu__list-title"
                                                   >
                                                     <span
-                                                      class="ll4r2nl dir dir-ltr"
+                                                      class="place__tips-desc-text dir dir-ltr"
                                                       >Mobility accessibility
                                                       features</span
                                                     >
                                                   </div>
                                                   <div
                                                     id="Tag:4802-row-subtitle"
-                                                    class="_1imhiqqh"
+                                                    class="personal-info__phone-number-desc"
                                                   >
                                                     These are the physical
                                                     attributes of the location
@@ -692,14 +692,14 @@
                                                     class="explore-filter-menu__list-title"
                                                   >
                                                     <span
-                                                      class="ll4r2nl dir dir-ltr"
+                                                      class="place__tips-desc-text dir dir-ltr"
                                                       >Sensory accessibility
                                                       features</span
                                                     >
                                                   </div>
                                                   <div
                                                     id="Tag:4805-row-subtitle"
-                                                    class="_1imhiqqh"
+                                                    class="personal-info__phone-number-desc"
                                                   >
                                                     These are the attributes of
                                                     your experience that may
@@ -954,11 +954,11 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                       >
                                         <fieldset class="_25bp3z">
                                           <legend class="_1wjt7fx">
-                                            <span class="ll4r2nl dir dir-ltr"
+                                            <span class="place__tips-desc-text dir dir-ltr"
                                               >Require Verified ID</span
                                             >
                                             <div class="svqfy2m dir dir-ltr">
-                                              <span class="ll4r2nl dir dir-ltr"
+                                              <span class="place__tips-desc-text dir dir-ltr"
                                                 >The primary booker has to
                                                 successfully complete verified
                                                 ID in order for them and their
@@ -984,7 +984,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                     class="explore-filter-menu__list-title"
                                                   >
                                                     <span
-                                                      class="ll4r2nl dir dir-ltr"
+                                                      class="place__tips-desc-text dir dir-ltr"
                                                       >Require the booker to
                                                       <span class="_11waoz2"
                                                         ><a
