--- a/edit/about.html
+++ b/edit/about.html
@@ -434,7 +434,7 @@
                                             line-height: 20px;
                                           "
                                         >
-                                          <span class="ll4r2nl dir dir-ltr"
+                                          <span class="place__tips-desc-text dir dir-ltr"
                                             >Use your legal name and provide a
                                             photo that clearly shows your face
                                             (not a logo).</span
@@ -459,7 +459,7 @@
                                         >
                                           <div class="flex">
                                             <div class="tab__checkbox-mr-16">
-                                              <div class="_1tn24b0o">
+                                              <div class="place__tips-profile-img">
                                                 <div
                                                   class="img-middle"
                                                   style="
@@ -509,7 +509,7 @@
                                           </div>
                                         </div>
                                         <div class="_othqbw">
-                                          <span class="ll4r2nl dir dir-ltr"
+                                          <span class="place__tips-desc-text dir dir-ltr"
                                             ><span class="_11waoz2"
                                               ><a
                                                 href="/account-settings/personal-info"
