--- a/edit/photos.html
+++ b/edit/photos.html
@@ -398,7 +398,7 @@
                                     line-height: 24px;
                                   "
                                 >
-                                  <span class="ll4r2nl dir dir-ltr"
+                                  <span class="place__tips-desc-text dir dir-ltr"
                                     >Every image is reviewed to make sure it
                                     meets experience photo requirements. We’ll
                                     email you to let you know when photos are
@@ -448,7 +448,7 @@
                                     line-height: 20px;
                                   "
                                 >
-                                  <span class="ll4r2nl dir dir-ltr"
+                                  <span class="place__tips-desc-text dir dir-ltr"
                                     >Your cover photo represents your experience
                                     as a whole, and needs to include a person
                                     engaged in the main activity.</span
@@ -639,7 +639,7 @@
                                     line-height: 20px;
                                   "
                                 >
-                                  <span class="ll4r2nl dir dir-ltr"
+                                  <span class="place__tips-desc-text dir dir-ltr"
                                     >Upload at least 4 more photos that
                                     highlight different aspects of your
                                     experience. Photos should include host/guest
@@ -2226,20 +2226,20 @@
                                   </h2>
                                   <ul class="_4dv0j1">
                                     <li class="_1smetjr">
-                                      <span class="ll4r2nl dir dir-ltr"
+                                      <span class="place__tips-desc-text dir dir-ltr"
                                         >A variety of details and angles,
                                         including photos of people in
                                         action</span
                                       >
                                     </li>
                                     <li class="_1smetjr">
-                                      <span class="ll4r2nl dir dir-ltr"
+                                      <span class="place__tips-desc-text dir dir-ltr"
                                         >Candid moments that accurately
                                         illustrate the experience</span
                                       >
                                     </li>
                                     <li class="_1smetjr">
-                                      <span class="ll4r2nl dir dir-ltr"
+                                      <span class="place__tips-desc-text dir dir-ltr"
                                         >Good image quality—no heavy filters,
                                         distortions, overlaid text, or
                                         watermarks</span
