--- a/edit/title.html
+++ b/edit/title.html
@@ -398,7 +398,7 @@
                                     line-height: 24px;
                                   "
                                 >
-                                  <span class="ll4r2nl dir dir-ltr"
+                                  <span class="place__tips-desc-text dir dir-ltr"
                                     >Make it descriptive and unique so guests
                                     will understand what you’re offering.</span
                                   >
