--- a/edit/what.html
+++ b/edit/what.html
@@ -640,7 +640,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                 id="DURATION-InputField-help"
                                               >
                                                 <span
-                                                  class="ll4r2nl dir dir-ltr"
+                                                  class="place__tips-desc-text dir dir-ltr"
                                                   >Online experiences are
                                                   typically 2 hours or
                                                   less.</span
@@ -662,7 +662,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                         <fieldset class="_25bp3z">
                                           <legend class="_1wjt7fx">
                                             <span class="flex-items-center"
-                                              ><span class="ll4r2nl dir dir-ltr"
+                                              ><span class="place__tips-desc-text dir dir-ltr"
                                                 >Where will you broadcast
                                                 from?</span
                                               ></span
@@ -688,7 +688,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                     </div>
                                                     <div
                                                       id="ONLINE_QUESTION-0-radio-row-row-subtitle"
-                                                      class="_1imhiqqh"
+                                                      class="personal-info__phone-number-desc"
                                                     >
                                                       Ex: My living room or
                                                       backyard
@@ -726,7 +726,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                     </div>
                                                     <div
                                                       id="ONLINE_QUESTION-1-radio-row-row-subtitle"
-                                                      class="_1imhiqqh"
+                                                      class="personal-info__phone-number-desc"
                                                     >
                                                       Ex: At a local park or
                                                       tourist attraction
