--- a/gift.html
+++ b/gift.html
@@ -241,7 +241,7 @@
                                               type="text"
                                               name="gift_pin"
                                               data-testid="gift_pin"
-                                              class="_c5rhl5"
+                                              class="input-field-container"
                                               id="gift_pin"
                                               value=""
                                               autocomplete="off"
