--- a/insights.html
+++ b/insights.html
@@ -375,15 +375,15 @@
                                         data-testid="BOOKING_TYPE"
                                         class="_izqret"
                                       >
-                                        <option value="ALL" class="_1tcxgp3">
+                                        <option value="ALL" class="place__details-recomendation-desc">
                                           All bookings
                                         </option>
-                                        <option value="PUBLIC" class="_1tcxgp3">
+                                        <option value="PUBLIC" class="place__details-recomendation-desc">
                                           Public bookings
                                         </option>
                                         <option
                                           value="PRIVATE"
-                                          class="_1tcxgp3"
+                                          class="place__details-recomendation-desc"
                                         >
                                           Private bookings
                                         </option>
