--- a/invite-friends.html
+++ b/invite-friends.html
@@ -195,7 +195,7 @@
                         >.
                       </div>
                     </div>
-                    <div class="_1s1qfkt6">
+                    <div class="account-container__menu-field">
                       <div class="_4q962a">
                         <div class="_z6fke6" role="button" tabindex="0">
                           Is the referral program still open?
