--- a/payment.html
+++ b/payment.html
@@ -212,7 +212,7 @@
                                                           </h3></span
                                                         ><span class="inline block-md"
                                                           ><span
-                                                            class="ll4r2nl dir dir-ltr"
+                                                            class="place__tips-desc-text dir dir-ltr"
                                                             >Sokratis-Nikos's
                                                             place is usually
                                                             booked.</span
@@ -869,7 +869,7 @@
                                                     hours.</strong
                                                   ><span>
                                                     <span
-                                                      class="ll4r2nl dir dir-ltr"
+                                                      class="place__tips-desc-text dir dir-ltr"
                                                       >Cancel before Oct 2 for a
                                                       partial refund.</span
                                                     > </span
