--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -457,7 +457,7 @@
                         <div>
                           <div class="_lo9vot">Kuniatsu</div>
                           <div class="_10rf6ea">
-                            <ol class="l7n4lsf dir dir-ltr">
+                            <ol class="place__rate-text dir dir-ltr">
                               <li class="len26si dir dir-ltr">
                                 <span>Jun 12 - Jun 12, 2022</span>
                               </li>
