--- a/signup_login.html
+++ b/signup_login.html
@@ -1081,7 +1081,7 @@
                                                       name="phoneInputphoneNumber"
                                                       aria-required="true"
                                                       data-testid="login-signup-phonenumber"
-                                                      class="_c5rhl5"
+                                                      class="input-field-container"
                                                       id="phoneInputphoneNumber"
                                                       autocomplete="tel-national"
                                                       inputmode="tel"
@@ -1157,7 +1157,7 @@
                                                       name="phoneInputphoneNumber"
                                                       aria-required="true"
                                                       data-testid="login-signup-phonenumber"
-                                                      class="_c5rhl5"
+                                                      class="input-field-container"
                                                       id="phoneInputphoneNumber"
                                                       autocomplete="tel-national"
                                                       inputmode="tel"
@@ -1308,7 +1308,7 @@
                                                 name="user[email]"
                                                 data-testid="email-login-email"
                                                 aria-required="true"
-                                                class="_c5rhl5"
+                                                class="input-field-container"
                                                 id="email-login-email"
                                                 autocomplete="off"
                                                 inputmode="email"
@@ -1338,7 +1338,7 @@
                                                 name="user[email]"
                                                 data-testid="email-login-email"
                                                 aria-required="true"
-                                                class="_c5rhl5"
+                                                class="input-field-container"
                                                 id="email-login-email"
                                                 autocomplete="off"
                                                 inputmode="email"
@@ -2088,7 +2088,7 @@
                                                       name="user[first_name]"
                                                       placeholder="First name"
                                                       data-testid="email-signup-user[first_name]"
-                                                      class="_c5rhl5"
+                                                      class="input-field-container"
                                                       id="email-signup-user[first_name]"
                                                       autocomplete="off"
                                                       type="text"
@@ -2159,7 +2159,7 @@
                                                       name="user[last_name]"
                                                       placeholder="Last name"
                                                       data-testid="email-signup-user[last_name]"
-                                                      class="_c5rhl5"
+                                                      class="input-field-container"
                                                       id="email-signup-user[last_name]"
                                                       autocomplete="off"
                                                       type="text"
@@ -2244,7 +2244,7 @@
                                                       name="user[first_name]"
                                                       placeholder="First name"
                                                       data-testid="email-signup-user[first_name]"
-                                                      class="_c5rhl5"
+                                                      class="input-field-container"
                                                       id="email-signup-user[first_name]"
                                                       autocomplete="off"
                                                       type="text"
@@ -2316,7 +2316,7 @@
                                                       name="user[last_name]"
                                                       placeholder="Last name"
                                                       data-testid="email-signup-user[last_name]"
-                                                      class="_c5rhl5"
+                                                      class="input-field-container"
                                                       id="email-signup-user[last_name]"
                                                       autocomplete="off"
                                                       type="text"
@@ -2419,7 +2419,7 @@
                                                       <input
                                                         aria-required="true"
                                                         max="2022-08-18"
-                                                        class="_c5rhl5"
+                                                        class="input-field-container"
                                                         id="email-signup-date"
                                                         autocomplete="off"
                                                         type="date"
@@ -2506,7 +2506,7 @@
                                                       <input
                                                         aria-required="true"
                                                         max="2022-08-18"
-                                                        class="_c5rhl5"
+                                                        class="input-field-container"
                                                         id="email-signup-date"
                                                         autocomplete="off"
                                                         type="date"
@@ -2628,7 +2628,7 @@
                                                     placeholder="Email"
                                                     name="user[email]"
                                                     data-testid="email-signup-email"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="email-signup-email"
                                                     autocomplete="off"
                                                     inputmode="email"
@@ -2689,7 +2689,7 @@
                                                     autocapitalize="none"
                                                     spellcheck="false"
                                                     data-testid="email-signup-password"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="email-signup-password"
                                                     autocomplete="off"
                                                     type="password"
@@ -2731,7 +2731,7 @@
                                                     autocapitalize="none"
                                                     spellcheck="false"
                                                     data-testid="email-signup-password"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="email-signup-password"
                                                     autocomplete="off"
                                                     type="password"
@@ -4133,7 +4133,7 @@
                                                     name="phoneInputphoneNumber"
                                                     aria-required="true"
                                                     data-testid="login-signup-phonenumber"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="phoneInputphoneNumber"
                                                     autocomplete="tel-national"
                                                     inputmode="tel"
@@ -4210,7 +4210,7 @@
                                                     name="phoneInputphoneNumber"
                                                     aria-required="true"
                                                     data-testid="login-signup-phonenumber"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="phoneInputphoneNumber"
                                                     value=""
                                                     autocomplete="tel-national"
@@ -4353,7 +4353,7 @@
                                               name="user[email]"
                                               data-testid="email-login-email"
                                               aria-required="true"
-                                              class="_c5rhl5"
+                                              class="input-field-container"
                                               id="email-login-email"
                                               autocomplete="off"
                                               inputmode="email"
@@ -4383,7 +4383,7 @@
                                               name="user[email]"
                                               data-testid="email-login-email"
                                               aria-required="true"
-                                              class="_c5rhl5"
+                                              class="input-field-container"
                                               id="email-login-email"
                                               autocomplete="off"
                                               inputmode="email"
@@ -5121,7 +5121,7 @@
                                                     name="user[first_name]"
                                                     placeholder="First name"
                                                     data-testid="email-signup-user[first_name]"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="email-signup-user[first_name]"
                                                     autocomplete="off"
                                                     type="text"
@@ -5192,7 +5192,7 @@
                                                     name="user[last_name]"
                                                     placeholder="Last name"
                                                     data-testid="email-signup-user[last_name]"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="email-signup-user[last_name]"
                                                     autocomplete="off"
                                                     type="text"
@@ -5277,7 +5277,7 @@
                                                     name="user[first_name]"
                                                     placeholder="First name"
                                                     data-testid="email-signup-user[first_name]"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="email-signup-user[first_name]"
                                                     autocomplete="off"
                                                     type="text"
@@ -5349,7 +5349,7 @@
                                                     name="user[last_name]"
                                                     placeholder="Last name"
                                                     data-testid="email-signup-user[last_name]"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="email-signup-user[last_name]"
                                                     autocomplete="off"
                                                     type="text"
@@ -5452,7 +5452,7 @@
                                                     <input
                                                       aria-required="true"
                                                       max="2022-08-18"
-                                                      class="_c5rhl5"
+                                                      class="input-field-container"
                                                       id="email-signup-date"
                                                       autocomplete="off"
                                                       type="date"
@@ -5539,7 +5539,7 @@
                                                     <input
                                                       aria-required="true"
                                                       max="2022-08-18"
-                                                      class="_c5rhl5"
+                                                      class="input-field-container"
                                                       id="email-signup-date"
                                                       autocomplete="off"
                                                       type="date"
@@ -5657,7 +5657,7 @@
                                                   placeholder="Email"
                                                   name="user[email]"
                                                   data-testid="email-signup-email"
-                                                  class="_c5rhl5"
+                                                  class="input-field-container"
                                                   id="email-signup-email"
                                                   autocomplete="off"
                                                   inputmode="email"
@@ -5718,7 +5718,7 @@
                                                   autocapitalize="none"
                                                   spellcheck="false"
                                                   data-testid="email-signup-password"
-                                                  class="_c5rhl5"
+                                                  class="input-field-container"
                                                   id="email-signup-password"
                                                   autocomplete="off"
                                                   type="password"
@@ -5760,7 +5760,7 @@
                                                   autocapitalize="none"
                                                   spellcheck="false"
                                                   data-testid="email-signup-password"
-                                                  class="_c5rhl5"
+                                                  class="input-field-container"
                                                   id="email-signup-password"
                                                   autocomplete="off"
                                                   type="password"
