--- a/specific_trip.html
+++ b/specific_trip.html
@@ -1366,7 +1366,7 @@
                                                         ><div class="_1ojpw5l">
                                                           <span class="_jan9qal"
                                                             ><span
-                                                              class="ll4r2nl dir dir-ltr"
+                                                              class="place__tips-desc-text dir dir-ltr"
                                                               >Healing session
                                                               is not only
                                                               passive but also
@@ -1375,7 +1375,7 @@
                                                           ><span
                                                             class="_jan9qal"
                                                             ><span
-                                                              class="ll4r2nl dir dir-ltr"
+                                                              class="place__tips-desc-text dir dir-ltr"
                                                               >Japanese monk
                                                               with Professional
                                                               Cellist <br />( 9
@@ -1389,7 +1389,7 @@
                                                           ><span
                                                             class="_jan9qal"
                                                             ><span
-                                                              class="ll4r2nl dir dir-ltr"
+                                                              class="place__tips-desc-text dir dir-ltr"
                                                               >30 minutes for
                                                               normal
                                                               sessions.<br />45
@@ -1401,7 +1401,7 @@
                                                           ><span
                                                             class="_jan9qal"
                                                             ><span
-                                                              class="ll4r2nl dir dir-ltr"
+                                                              class="place__tips-desc-text dir dir-ltr"
                                                               >This also can be
                                                               called " music
                                                               therapy ".</span
@@ -1409,7 +1409,7 @@
                                                           ><span
                                                             class="_jan9qal"
                                                             ><span
-                                                              class="ll4r2nl dir dir-ltr"
+                                                              class="place__tips-desc-text dir dir-ltr"
                                                               >I will ask you to
                                                               mute your mic
                                                               while listening
@@ -1424,7 +1424,7 @@
                                                           ><span
                                                             class="_jan9qal"
                                                             ><span
-                                                              class="ll4r2nl dir dir-ltr"
+                                                              class="place__tips-desc-text dir dir-ltr"
                                                               >Don't forget
                                                               humming or
                                                               breathing out
@@ -1434,7 +1434,7 @@
                                                           ><span
                                                             class="_jan9qal"
                                                             ><span
-                                                              class="ll4r2nl dir dir-ltr"
+                                                              class="place__tips-desc-text dir dir-ltr"
                                                               >You can learn not
                                                               only cello and
                                                               sutra chanting,
@@ -1445,7 +1445,7 @@
                                                             ></span
                                                           ><span class="_fgnfat"
                                                             ><span
-                                                              class="ll4r2nl dir dir-ltr"
+                                                              class="place__tips-desc-text dir dir-ltr"
                                                               >one more to note,
                                                               better high-speed
                                                               Internet
@@ -1456,7 +1456,7 @@
                                                         <div class="inherit-hide-print">
                                                           <span class="_jan9qal"
                                                             ><span
-                                                              class="ll4r2nl dir dir-ltr"
+                                                              class="place__tips-desc-text dir dir-ltr"
                                                               >Healing session
                                                               is not only
                                                               passive but also
@@ -1464,7 +1464,7 @@
                                                             ></span
                                                           ><span class="_fgnfat"
                                                             ><span
-                                                              class="ll4r2nl dir dir-ltr"
+                                                              class="place__tips-desc-text dir dir-ltr"
                                                               >Japanese monk
                                                               with Professional
                                                               Cellist <br />( 9
@@ -1575,7 +1575,7 @@
                                                   data-testid="reservation-host-header-row"
                                                 >
                                                   <div class="flex-items-center-content-between">
-                                                    <div class="_149pqlo">
+                                                    <div class="place__show-photos-icon">
                                                       <div class="_1f4mp40">
                                                         <h2
                                                           tabindex="-1"
