--- a/submission/about.html
+++ b/submission/about.html
@@ -1134,7 +1134,7 @@
                               >
                                 <div class="flex">
                                   <div class="tab__checkbox-mr-16">
-                                    <div class="_1tn24b0o">
+                                    <div class="place__tips-profile-img">
                                       <div
                                         class="img-middle"
                                         style="
@@ -1179,7 +1179,7 @@
                                     </div>
                                     <div
                                       id="profile_photo-row-subtitle"
-                                      class="_1imhiqqh"
+                                      class="personal-info__phone-number-desc"
                                     >
                                       PH
                                     </div>
