--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1203,7 +1203,7 @@
                                               </div>
                                               <div
                                                 id="Tag:4804-row-subtitle"
-                                                class="_1imhiqqh"
+                                                class="personal-info__phone-number-desc"
                                               >
                                                 This is how you communicate with
                                                 guests on your experience.
@@ -1248,7 +1248,7 @@
                                               </div>
                                               <div
                                                 id="Tag:4802-row-subtitle"
-                                                class="_1imhiqqh"
+                                                class="personal-info__phone-number-desc"
                                               >
                                                 These are the physical
                                                 attributes of the location of
