--- a/submission/video.html
+++ b/submission/video.html
@@ -1095,7 +1095,7 @@
                                 </div>
                                 <div class="_m84zxx">Open checklist in:</div>
                                 <div class="_eyszxt">
-                                  <div class="_149pqlo">
+                                  <div class="place__show-photos-icon">
                                     <a
                                       rel="noopener noreferrer"
                                       target="_blank"
