--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1306,7 +1306,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                           </div>
                                           <div
                                             id="info_where_are_you_broadcasting-Indoors or on my personal property-row-subtitle"
-                                            class="_1imhiqqh"
+                                            class="personal-info__phone-number-desc"
                                           >
                                             Ex: My living room or backyard
                                           </div>
@@ -1345,7 +1345,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                           </div>
                                           <div
                                             id="info_where_are_you_broadcasting-Outdoors and not on my personal property-row-subtitle"
-                                            class="_1imhiqqh"
+                                            class="personal-info__phone-number-desc"
                                           >
                                             Ex: At a local park or tourist
                                             attraction
