--- a/transaction_history.html
+++ b/transaction_history.html
@@ -54,7 +54,7 @@
                         <div class="_15cspq7">
                           <div class="_1ic3zh3g">
                             <div class="_1qc1sqs">
-                              <span class="ll4r2nl dir dir-ltr"
+                              <span class="place__tips-desc-text dir dir-ltr"
                                 >Your payouts are paused: Add important hosting
                                 details to start getting paid again. </span
                               ><a
