--- a/welcome_back.html
+++ b/welcome_back.html
@@ -354,7 +354,7 @@
                                                 spellcheck="false"
                                                 data-testid="email-signup-password"
                                                 aria-required="true"
-                                                class="_c5rhl5"
+                                                class="input-field-container"
                                                 id="email-signup-password"
                                                 autocomplete="off"
                                                 type="password"
