--- a/wishlists.html
+++ b/wishlists.html
@@ -286,7 +286,7 @@
                                               </div>
                                               <div
                                                 id="1148602671-row-subtitle"
-                                                class="_1imhiqqh"
+                                                class="personal-info__phone-number-desc"
                                               >
                                                 <div class="_10rf6ea">
                                                   Sep 3 – 5
