--- a/basics.html
+++ b/basics.html
@@ -606,7 +606,7 @@
                                             role="combobox"
                                             data-testid="city-input"
                                             data-reach-combobox-input=""
-                                            class="_c5rhl5"
+                                            class="input-field-container"
                                             id="submission_city"
                                             autocomplete="off"
                                             type="text"
