--- a/become-a-host/preview.html
+++ b/become-a-host/preview.html
@@ -391,12 +391,12 @@
                                 <div class="_1fbr7oxa">
                                   <h2 class="_1m6reg9">Location</h2>
                                   <h3 class="_n8ay8e">
-                                    <span class="ll4r2nl dir dir-ltr"
+                                    <span class="place__tips-desc-text dir dir-ltr"
                                       >Metro Manila, Philippines</span
                                     >
                                   </h3>
                                   <div class="_dxiwe1">
-                                    <span class="ll4r2nl dir dir-ltr"
+                                    <span class="place__tips-desc-text dir dir-ltr"
                                       >We’ll only share your address with guests
                                       who are booked as outlined in our
                                       <span class="_11waoz2"
