--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -2321,7 +2321,7 @@
                               <input
                                 name="zipCode"
                                 errormessage=""
-                                class="_c5rhl5"
+                                class="input-field-container"
                                 id="zipCode"
                                 autocomplete="off"
                                 type="text"
@@ -2344,7 +2344,7 @@
                               <input
                                 name="zipCode"
                                 ariadescribedby="credit-card-zip-error"
-                                class="_c5rhl5"
+                                class="input-field-container"
                                 id="zipCode"
                                 autocomplete="off"
                                 type="text"
