--- a/resolutions.html
+++ b/resolutions.html
@@ -60,7 +60,7 @@
                     ></path>
                   </svg>
                 </div>
-                <ol class="l7n4lsf dir dir-ltr">
+                <ol class="place__rate-text dir dir-ltr">
                   <li class="len26si dir dir-ltr">
                     <span class="calendar-sideba__sched-event-time-wrapper">Send or request money - Airbnb</span>
                   </li>
@@ -130,7 +130,7 @@
                           <div>
                             <div class="_lo9vot">Kuniatsu</div>
                             <div class="_10rf6ea">
-                              <ol class="l7n4lsf dir dir-ltr">
+                              <ol class="place__rate-text dir dir-ltr">
                                 <li class="len26si dir dir-ltr">
                                   <span>Jun 13 - Jun 13, 2022</span>
                                 </li>
