--- a/signup_login.html
+++ b/signup_login.html
@@ -1104,7 +1104,7 @@
                                                       name="phoneInputphoneNumber"
                                                       aria-required="true"
                                                       data-testid="login-signup-phonenumber"
-                                                      class="_c5rhl5"
+                                                      class="input-field-container"
                                                       id="phoneInputphoneNumber"
                                                       autocomplete="tel-national"
                                                       inputmode="tel"
@@ -1180,7 +1180,7 @@
                                                       name="phoneInputphoneNumber"
                                                       aria-required="true"
                                                       data-testid="login-signup-phonenumber"
-                                                      class="_c5rhl5"
+                                                      class="input-field-container"
                                                       id="phoneInputphoneNumber"
                                                       autocomplete="tel-national"
                                                       inputmode="tel"
@@ -1352,7 +1352,7 @@
                                                 name="user[email]"
                                                 data-testid="email-login-email"
                                                 aria-required="true"
-                                                class="_c5rhl5"
+                                                class="input-field-container"
                                                 id="email-login-email"
                                                 autocomplete="off"
                                                 inputmode="email"
@@ -1382,7 +1382,7 @@
                                                 name="user[email]"
                                                 data-testid="email-login-email"
                                                 aria-required="true"
-                                                class="_c5rhl5"
+                                                class="input-field-container"
                                                 id="email-login-email"
                                                 autocomplete="off"
                                                 inputmode="email"
@@ -2292,7 +2292,7 @@
                                                       name="user[first_name]"
                                                       placeholder="First name"
                                                       data-testid="email-signup-user[first_name]"
-                                                      class="_c5rhl5"
+                                                      class="input-field-container"
                                                       id="email-signup-user[first_name]"
                                                       autocomplete="off"
                                                       type="text"
@@ -2363,7 +2363,7 @@
                                                       name="user[last_name]"
                                                       placeholder="Last name"
                                                       data-testid="email-signup-user[last_name]"
-                                                      class="_c5rhl5"
+                                                      class="input-field-container"
                                                       id="email-signup-user[last_name]"
                                                       autocomplete="off"
                                                       type="text"
@@ -2448,7 +2448,7 @@
                                                       name="user[first_name]"
                                                       placeholder="First name"
                                                       data-testid="email-signup-user[first_name]"
-                                                      class="_c5rhl5"
+                                                      class="input-field-container"
                                                       id="email-signup-user[first_name]"
                                                       autocomplete="off"
                                                       type="text"
@@ -2520,7 +2520,7 @@
                                                       name="user[last_name]"
                                                       placeholder="Last name"
                                                       data-testid="email-signup-user[last_name]"
-                                                      class="_c5rhl5"
+                                                      class="input-field-container"
                                                       id="email-signup-user[last_name]"
                                                       autocomplete="off"
                                                       type="text"
@@ -2623,7 +2623,7 @@
                                                       <input
                                                         aria-required="true"
                                                         max="2022-08-18"
-                                                        class="_c5rhl5"
+                                                        class="input-field-container"
                                                         id="email-signup-date"
                                                         autocomplete="off"
                                                         type="date"
@@ -2710,7 +2710,7 @@
                                                       <input
                                                         aria-required="true"
                                                         max="2022-08-18"
-                                                        class="_c5rhl5"
+                                                        class="input-field-container"
                                                         id="email-signup-date"
                                                         autocomplete="off"
                                                         type="date"
@@ -2832,7 +2832,7 @@
                                                     placeholder="Email"
                                                     name="user[email]"
                                                     data-testid="email-signup-email"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="email-signup-email"
                                                     autocomplete="off"
                                                     inputmode="email"
@@ -2893,7 +2893,7 @@
                                                     autocapitalize="none"
                                                     spellcheck="false"
                                                     data-testid="email-signup-password"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="email-signup-password"
                                                     autocomplete="off"
                                                     type="password"
@@ -2935,7 +2935,7 @@
                                                     autocapitalize="none"
                                                     spellcheck="false"
                                                     data-testid="email-signup-password"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="email-signup-password"
                                                     autocomplete="off"
                                                     type="password"
@@ -4359,7 +4359,7 @@
                                                     name="phoneInputphoneNumber"
                                                     aria-required="true"
                                                     data-testid="login-signup-phonenumber"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="phoneInputphoneNumber"
                                                     autocomplete="tel-national"
                                                     inputmode="tel"
@@ -4436,7 +4436,7 @@
                                                     name="phoneInputphoneNumber"
                                                     aria-required="true"
                                                     data-testid="login-signup-phonenumber"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="phoneInputphoneNumber"
                                                     value=""
                                                     autocomplete="tel-national"
@@ -4622,7 +4622,7 @@
                                               name="user[email]"
                                               data-testid="email-login-email"
                                               aria-required="true"
-                                              class="_c5rhl5"
+                                              class="input-field-container"
                                               id="email-login-email"
                                               autocomplete="off"
                                               inputmode="email"
@@ -4652,7 +4652,7 @@
                                               name="user[email]"
                                               data-testid="email-login-email"
                                               aria-required="true"
-                                              class="_c5rhl5"
+                                              class="input-field-container"
                                               id="email-login-email"
                                               autocomplete="off"
                                               inputmode="email"
@@ -5670,7 +5670,7 @@
                                                     name="user[first_name]"
                                                     placeholder="First name"
                                                     data-testid="email-signup-user[first_name]"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="email-signup-user[first_name]"
                                                     autocomplete="off"
                                                     type="text"
@@ -5741,7 +5741,7 @@
                                                     name="user[last_name]"
                                                     placeholder="Last name"
                                                     data-testid="email-signup-user[last_name]"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="email-signup-user[last_name]"
                                                     autocomplete="off"
                                                     type="text"
@@ -5826,7 +5826,7 @@
                                                     name="user[first_name]"
                                                     placeholder="First name"
                                                     data-testid="email-signup-user[first_name]"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="email-signup-user[first_name]"
                                                     autocomplete="off"
                                                     type="text"
@@ -5898,7 +5898,7 @@
                                                     name="user[last_name]"
                                                     placeholder="Last name"
                                                     data-testid="email-signup-user[last_name]"
-                                                    class="_c5rhl5"
+                                                    class="input-field-container"
                                                     id="email-signup-user[last_name]"
                                                     autocomplete="off"
                                                     type="text"
@@ -6001,7 +6001,7 @@
                                                     <input
                                                       aria-required="true"
                                                       max="2022-08-18"
-                                                      class="_c5rhl5"
+                                                      class="input-field-container"
                                                       id="email-signup-date"
                                                       autocomplete="off"
                                                       type="date"
@@ -6088,7 +6088,7 @@
                                                     <input
                                                       aria-required="true"
                                                       max="2022-08-18"
-                                                      class="_c5rhl5"
+                                                      class="input-field-container"
                                                       id="email-signup-date"
                                                       autocomplete="off"
                                                       type="date"
@@ -6206,7 +6206,7 @@
                                                   placeholder="Email"
                                                   name="user[email]"
                                                   data-testid="email-signup-email"
-                                                  class="_c5rhl5"
+                                                  class="input-field-container"
                                                   id="email-signup-email"
                                                   autocomplete="off"
                                                   inputmode="email"
@@ -6267,7 +6267,7 @@
                                                   autocapitalize="none"
                                                   spellcheck="false"
                                                   data-testid="email-signup-password"
-                                                  class="_c5rhl5"
+                                                  class="input-field-container"
                                                   id="email-signup-password"
                                                   autocomplete="off"
                                                   type="password"
@@ -6309,7 +6309,7 @@
                                                   autocapitalize="none"
                                                   spellcheck="false"
                                                   data-testid="email-signup-password"
-                                                  class="_c5rhl5"
+                                                  class="input-field-container"
                                                   id="email-signup-password"
                                                   autocomplete="off"
                                                   type="password"
